@@ -19,6 +19,10 @@ HISTORY
 
   ++ New features:
 
+  2010-02-14: Simon Goldschmidt/Stephane Lesage
+  * ip_addr.h: Improved some defines working on ip addresses, added faster
+    macro to copy addresses that cannot be NULL
+
   2010-02-13: Simon Goldschmidt
   * api.h, api_lib.c, api_msg.c, sockets.c: task #7865 (implement non-
     blocking send operation)
